fix: hide status bar entirely on mobile (pointer: coarse)

--- a/src/index.css
+++ b/src/index.css
@@ -520,7 +520,7 @@ h1 {
 }
 
 @media (pointer: coarse) {
-    .status-bar-shortcut {
+    .status-bar {
         display: none;
     }
 }
